# simple_math

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/architecture/decisions/: 0001-record-architecture-decisions.md
src/: lib.rs  operations.rs
src/operations/: addition.rs
tests/: add.rs
