[package]
name = "simple_math"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "simple_math"

[[bin]]
path = "src/bin/main.rs"
name = "main"

[[bin]]
path = "src/bin/cli.rs"
name = "cli"

[dependencies]
